# 6502simulator

./: CMakeLists.txt  README.md
6502disasm/: CMakeLists.txt  main.cpp
6502sim/: CMakeLists.txt  main.cpp
lib6502sim/: CMakeLists.txt
lib6502sim/include/: CMakeLists.txt  opcode.h  register_file.h  simulator.h
lib6502sim/source/: CMakeLists.txt  decode.cpp  helper.cpp  init.cpp  instructions.cpp  opcode_table.cpp  simulator.cpp
lib6502sim/source/include/: decode.h  instructions.h  opcode_table.h
lib6502sim/tests/6502_binaries/adress_modes/: basic_loop.S
lib6502sim/tests/6502_binaries/basic_loop/: basic_loop.S
